--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -6,21 +6,24 @@
 
 {% block body %}
 	<section class="container mx-auto px-4 my-12">
-		<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-			<div class="flex flex-col md:flex-row gap-2 md:gap-4">
+		<div
+			class="grid grid-cols-1 md:grid-cols-2 gap-4">
+			<!-- Product images container -->
+			<div class="grid md:grid-cols-2 gap-2">
 				{% set mainImage = product.productImages[0] %}
 				<div>
-					<img id="main-product-image" class="w-full h-auto" src="{{ asset('uploads/images/products/' ~ mainImage.path) | imagine_filter('product_large') }}" alt="Image de {{ product.name }}">
+					<img id="main-product-image" class="w-full h-auto" src="{{ asset('uploads/images/products/' ~ mainImage.path) | imagine_filter('product_image') }}" alt="Image de {{ product.name }}">
 				</div>
-				<div class="flex flex-col gap-2">
+				<div id="thumbnail-images-container" class="flex flex-row gap-2 overflow-x-auto md:flex-col md:overflow-visible">
 					{% for productImage in product.productImages %}
-						<img class="w-20 h-auto cursor-pointer" src="{{ asset('uploads/images/products/' ~ productImage.path) | imagine_filter('product_thumbnail') }}" alt="Image de {{ product.name }}" onclick="changeMainImage(this)">
+						<img class="w-24 h-auto cursor-pointer product-thumbnail" src="{{ asset('uploads/images/products/' ~ productImage.path) | imagine_filter('product_thumbnail') }}" data-large-image="{{ asset('uploads/images/products/' ~ productImage.path) | imagine_filter('product_image') }}" alt="Image de {{ product.name }}">
 					{% endfor %}
 				</div>
 			</div>
 
 			{# Product details section #}
 			<div>
+				{# Affiche le nom du produit #}
 				<h1 class="text-3xl font-bold mb-4">{{ product.name }}</h1>
 				<p class="text-xl font-bold text-gray-900 dark:text-white mb-4">{{ product.price }}€</p>
 				<p class="mb-4">{{ product.description | raw }}</p>
@@ -60,8 +63,8 @@
 						<div class="option-container">
 							{% for sleeve in sleeves %}
 								{% if sleeve.gender.id == product.gender.id %}
-									<div class="sleeve-option-item cursor-pointer flex items-center px-4 py-2 hover:bg-gray-100" data-img-src="{{ asset('uploads/images/products/' ~ sleeve.productImages[0].path) | imagine_filter('product_thumbnail') }}">
-										<img class="sleeve-thumbnail" src="{{ asset('uploads/images/products/' ~ sleeve.productImages[0].path) | imagine_filter('product_thumbnail') }}" alt="{{ sleeve.name }}">
+									<div class="sleeve-option-item cursor-pointer flex items-center px-4 py-2 hover:bg-gray-100" data-img-src="{{ asset('uploads/images/products/' ~ sleeve.productImages[0].path) | imagine_filter('sleeve_thumbnail') }}">
+										<img class="sleeve-thumbnail" src="{{ asset('uploads/images/products/' ~ sleeve.productImages[0].path) | imagine_filter('sleeve_thumbnail') }}" alt="{{ sleeve.name }}">
 										{{ sleeve.name }}
 									</div>
 								{% endif %}
