Mettre en anglais les genres

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -15,10 +15,10 @@
 				<h3 class="mb-6 text-sm font-semibold text-gray-400 uppercase dark:text-white">PLAN DU SITE</h3>
 				<ul>
 					<li class="mb-4">
-						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="{{ path('app_products_homme') }}">Homme</a>
+						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="{{ path('app_products_male') }}">Homme</a>
 					</li>
 					<li class="mb-4">
-						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="{{ path('app_products_femme') }}">Femme</a>
+						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="{{ path('app_products_female') }}">Femme</a>
 					</li>
 					<li class="mb-4">
 						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="#">Notre Histoire</a>
