--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -27,10 +27,10 @@
 		<div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
 			<ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 				<li>
-					<a href="{{ path('app_products_homme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Homme</span></a>
+					<a href="{{ path('app_products_male') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Homme</span></a>
 				</li>
 				<li>
-					<a href="{{ path('app_products_femme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Femme</span></a>
+					<a href="{{ path('app_products_female') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Femme</span></a>
 				</li>
 				<li>
                     <a href="{{ path('app_our_story') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Notre Histoire</span></a>
