--- a/templates/partials/_product_cards.html.twig
+++ b/templates/partials/_product_cards.html.twig
@@ -2,18 +2,18 @@
 	<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
 		{% for product in products %}
 			<div class="w-full max-w-sm h-auto bg-white border border-gray-100 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-				{% if product.gender.name == 'Homme' %}
-					<a href="{{ path('app_products_homme_show', {'id': product.id}) }}" class="aspect-w-4 aspect-h-3">
+				{% if product.gender.name|trans == 'Homme' %}
+					<a href="{{ path('app_products_male_show', {'id': product.id}) }}" class="aspect-w-4 aspect-h-3">
 				{% else %}
-					<a href="{{ path('app_products_femme_show', {'id': product.id}) }}" class="aspect-w-4 aspect-h-3">
+					<a href="{{ path('app_products_female_show', {'id': product.id}) }}" class="aspect-w-4 aspect-h-3">
 				{% endif %}
 					<img class="object-cover mx-auto w-full rounded-t-lg" src="{{ asset('uploads/images/products/' ~ product.productImages[0].path) | imagine_filter('product_card_thumbnail') }}" alt="Image de {{ product.name }}" />
 				</a>
 				<div class="px-5 pb-5">
-					{% if product.gender.name == 'Homme' %}
-						<a href="{{ path('app_products_homme_show', {'id': product.id}) }}">
+					{% if product.gender.name|trans == 'Homme' %}
+						<a href="{{ path('app_products_male_show', {'id': product.id}) }}">
 					{% else %}
-						<a href="{{ path('app_products_femme_show', {'id': product.id}) }}">
+						<a href="{{ path('app_products_female_show', {'id': product.id}) }}">
 					{% endif %}
 						<h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ product.name }}</h5>
 					</a>
