--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,7 +1,7 @@
 <header class="relative">
     {% if header is not null %}
-        <div class="header-image-container relative w-full h-screen flex items-center justify-center overflow-hidden">
-            <div class="aspect-w-16 aspect-h-9 w-full h-full">
+        <div class="relative w-full h-screen flex items-center justify-center overflow-hidden">
+            <div class="aspect-[16/9] w-full h-full">
                 <img src="{{ vich_uploader_asset(header, 'imageFile')|imagine_filter('header_thumbnail') }}" alt="{{ header.title }}" class="object-cover w-full h-full">
             </div>
             <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
