--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -74,7 +74,7 @@
 				</div>
 
 				<!-- Move the button here -->
-				<button class="fb-button fb-button-primary">Ajouter au panier</button>
+				<button type="submit" class="py-2 px-4 w-full text-sm font-medium text-center text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Ajouter au panier</button>
 			</div>
 		</div>
 	</section>
