--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -50,7 +50,7 @@
 
 				{# Sleeve options #}
 				<div class="mb-4 sleeve-options-wrapper">
-					<label for="sleeve" class="block mb-2">Option de manche :</label>
+					<label for="sleeve-menu-button" class="block mb-2">Option de manche :</label>
 					<button id="sleeve-menu-button" class="fb-select relative bg-white border border-gray-300 rounded py-2 px-4 text-gray-700">
 						<span id="selected-sleeve-option">-- Sélectionnez une option de manche --</span>
 						<img id="selected-sleeve-thumbnail" class="sleeve-thumbnail" src="" alt="Selected sleeve option" style="display: none;">
