Ajout cart + colorCrud

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -13,7 +13,7 @@
 			<a href="{{ path('app_login') }}" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4">
 				<i class="fa-solid fa-user text-2xl"></i>
 			</a>
-			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white">
+			<a href="{{ path('app_cart') }}" class="text-gray-700 hover:text-primary-500 dark:text-white">
 				<i class="fas fa-shopping-bag text-2xl"></i>
 			</a>
 			<button data-collapse-toggle="navbar-cta" type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-cta" aria-expanded="false">
