--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -28,25 +28,26 @@
 				<p class="text-xl font-bold text-gray-900 dark:text-white mb-4">{{ product.price }}€</p>
 				<p class="mb-4">{{ product.description | raw }}</p>
 
-				{# Sizes #}
-				<div class="mb-4">
-					<label for="size" class="block mb-2">Taille :</label>
-					<select id="size" name="size">
-						{% for size in product.sizes %}
-							<option value="{{ size }}">{{ size }}</option>
-						{% endfor %}
-					</select>
+				{{ form_start(form) }}
+				<div class="form-group">
+					{{ form_label(form.size, 'Taille') }}
+					{{ form_widget(form.size, { 'attr': {'class': 'form-control'} }) }}
+					{{ form_errors(form.size) }}
 				</div>
-
-				{# Colors #}
-				<div class="mb-4">
-					<label for="color" class="block mb-2">Couleur :</label>
-					<select id="color" name="color">
-						{% for color in product.colors %}
-							<option value="{{ color }}">{{ color }}</option>
-						{% endfor %}
-					</select>
+				<div class="form-group">
+					{{ form_label(form.color, 'Couleur') }}
+					{{ form_widget(form.color, { 'attr': {'class': 'form-control'} }) }}
+					{{ form_errors(form.color) }}
 				</div>
+				<div class="form-group">
+					{{ form_label(form.quantity, 'Quantité') }}
+					{{ form_widget(form.quantity, { 'attr': {'class': 'form-control'} }) }}
+					{{ form_errors(form.quantity) }}
+				</div>
+				<div class="form-group">
+					{{ form_widget(form.submit, { 'attr': {'class': 'btn btn-primary'} }) }}
+				</div>
+				{{ form_end(form) }}
 
 				{# Sleeve options #}
 				<div class="mb-4 sleeve-options-wrapper">
@@ -72,10 +73,7 @@
 						</div>
 					</div>
 				</div>
-
-				<!-- Move the button here -->
-				<button type="submit" class="py-2 px-4 w-full text-sm font-medium text-center text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Ajouter au panier</button>
 			</div>
-		</div>
-	</section>
+		</section>
 {% endblock %}
+
