👌 IMPROVE: Config fr + form product

--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -30,17 +30,17 @@
 
 				{{ form_start(form) }}
 				<div class="form-group">
-					{{ form_label(form.size, 'Taille') }}
+					{{ form_label(form.size, 'Sizes') }}
 					{{ form_widget(form.size, { 'attr': {'class': 'form-control'} }) }}
 					{{ form_errors(form.size) }}
 				</div>
 				<div class="form-group">
-					{{ form_label(form.color, 'Couleur') }}
+					{{ form_label(form.color, 'Colors') }}
 					{{ form_widget(form.color, { 'attr': {'class': 'form-control'} }) }}
 					{{ form_errors(form.color) }}
 				</div>
 				<div class="form-group">
-					{{ form_label(form.quantity, 'Quantité') }}
+					{{ form_label(form.quantity, 'Quantity') }}
 					{{ form_widget(form.quantity, { 'attr': {'class': 'form-control'} }) }}
 					{{ form_errors(form.quantity) }}
 				</div>
